[package]
name = "speech_reinforcement"
version = "1.0.0"
authors = ["Chris Whealy <chris@whealy.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
libm = "^0.1.4"
serde = "^1.0.59"
serde_derive = "^1.0.59"

[dependencies.wasm-bindgen]
version = "^0.2"
features = ["serde-serialize"]

